fixed/added alt, align navigation panel

--- a/style.css
+++ b/style.css
@@ -1,16 +1,21 @@
 .navigation {
   background-color: #fc7e08;
-  text-align: end;
-  height: 35px;
-  padding: 5px 5px 15px 5px;
+  height: 45px;
+  width: 100%;
+  display: inline-flex;
+  justify-content: flex-end;
+  align-items: center;
 }
+
 .nav {
   list-style-type: none;
+  display: inline-flex;
+  flex-direction: row;
 }
 
 .nav_icon {
-  margin-left: 10px;
-  margin-right: 10px;
+  margin-right: 8px;
+  margin-left: 8px;
 }
 
 .nav_icon_image {
@@ -18,12 +23,16 @@
   width: 25px;
 }
 
-.nav_icon:focus:hover {
+.nav_icon:focus {
   cursor: pointer;
   background: rgb(175, 172, 172);
 }
 
-span:hover {
+.hidden_checkbox {
+  position: absolute;
+}
+
+.text_more:hover {
   cursor: pointer;
   background: #fc7e08;
   border: 1px solid #fc7e08;
@@ -44,13 +53,15 @@ span:hover {
   margin-left: auto;
   padding: 10px 10px 10px 10px;
 }
-#checkbox,
-#show_more {
+.hidden_checkbox,
+.more_images {
   opacity: 0;
 }
-#checkbox:checked + .main_menu_icons {
+
+.hidden_checkbox:checked ~ .main_menu_icons {
   display: grid;
-  margin-top: 16px;
+  margin-top: 135px;
+  margin-right: 20px;
   grid-template-columns: 40px 40px 40px;
   grid-template-rows: 40px 40px 40px;
   gap: 15px 15px;
@@ -61,6 +72,7 @@ span:hover {
   justify-content: flex-start;
   background-color: rgb(175, 172, 172);
   transition-delay: 2s;
+  position: fixed;
 }
 /*Styles for pressing "More" button*/
 
@@ -71,7 +83,7 @@ span:hover {
   padding: 0;
 }
 
-#show_more:checked + .more_menu_icons {
+.more_images:checked + .more_menu_icons {
   display: grid;
   grid-template-columns: 40px 40px 40px;
   grid-template-rows: auto;
@@ -84,7 +96,7 @@ li:hover {
   border-radius: 10%;
 }
 
-span {
+.text_more {
   border: 0.5px solid grey;
   border-width: 1px auto 1px auto;
   border-radius: 0;
@@ -94,7 +106,8 @@ span {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.navigation input:checked ~ .nav_icon {
+.navigation input:focus ~ .nav_icon {
+  cursor: pointer;
   background-color: rgb(175, 172, 172);
   border-radius: 10%;
 }
